src/objects/pymt__Sites_User_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>User settings and preferences related to viewing PaymentConnect Sites and Community pages.</description>
    <fields>
        <fullName>pymt__Default_Site_Template__c</fullName>
        <description>SiteTemplate to use if a default Site Template cannot be found for a given Sites website (e.g. internal /apex/ directory viewing).</description>
        <inlineHelpText>SiteTemplate to use if a default Site Template cannot be found for a given Sites website (e.g. internal /apex/ directory viewing).</inlineHelpText>
        <label>Default Site Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Preferred_Payment_Method__c</fullName>
        <description>Record ID of the payment method to display as the default during checkout.</description>
        <inlineHelpText>Record ID of the payment method to display as the default during checkout.</inlineHelpText>
        <label>Preferred Payment Method</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Test_Logged_In_Contact__c</fullName>
        <description>Record Id of the Contact to use for testing authenticated user features inside of Salesforce.</description>
        <inlineHelpText>Record Id of the Contact to use for testing authenticated user features inside of Salesforce.</inlineHelpText>
        <label>Test Logged In Contact</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Sites User Settings</label>
</CustomObject>